notes up to Oct15

--- a/W05D4/W05D04_SVM.ipynb
+++ b/W05D4/W05D04_SVM.ipynb
@@ -83,10 +83,10 @@
     "Now, we convert each review into a feature vector.\n",
     "\n",
     "These review are turned into feature vectors - using a technique called bag of words. Take a dictionary of 20,000 English words and stipulate that in our feature vector:\n",
-    "* the first feature is equal to 1 if the email message contains the word “a”; otherwise, this feature is 0;\n",
-    "* the second feature is equal to 1 if the email message contains the word “aaron”; otherwise, this feature equals 0;\n",
+    "* the first feature is equal to 1 if the review contains the word “a”; otherwise, this feature is 0;\n",
+    "* the second feature is equal to 1 if the review contains the word “aaron”; otherwise, this feature equals 0;\n",
     "* . . .\n",
-    "* the feature at position 20,000 is equal to 1 if the email message contains the word “zulu”; otherwise, this feature is equal to 0."
+    "* the feature at position 20,000 is equal to 1 if the review contains the word “zulu”; otherwise, this feature is equal to 0."
    ]
   },
   {
@@ -97,7 +97,7 @@
     }
    },
    "source": [
-    "If you repeat the above procedure for every email message in our collection, which gives us 5,000 feature vectors (each vector having the dimensionality of 20,000) and a label (“pos”/“neg”).\n",
+    "If you repeat the above procedure for review in our collection, which gives us 5,000 feature vectors (each vector having the dimensionality of 20,000) and a label (“pos”/“neg”).\n",
     "Don't worry too much about it. Sklearn Countvectorizer will do this for us.\n",
     "\n",
     "Now you have machine-readable input data, but the output labels are still in the form of human-readable text. "
