add model selection tricks

--- a/W05D5/W05D5_MidProject_Kickoff.ipynb
+++ b/W05D5/W05D5_MidProject_Kickoff.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "This [repository](https://github.com/lighthouse-labs/mid-term_project) has the notebooks you need to read.\n",
     "\n",
-    "The data is stored in a Postgres database, you will be given the information about host and credentials."
+    "The data is stored in a Postgres database, you can find the credentials in the Data Gathering Activity."
    ]
   },
   {
@@ -105,6 +105,9 @@
     "     - Choose a Licence over your work\n",
     "     - Decide how will you collaborate, will you share a Notebook on Google Cloud? Will you use a Version Control (Github) system?\n",
     "     - Decide how many Jupyter notebooks or python scripts you will need so that you do not duplicate work.\n",
+    "     - Don't do\n",
+    "     SELECT * FROM aviation without a WHERE clause\n",
+    "     Do: Save as CSV\n",
     "    \n",
     "    * How to divide up tasks?\n",
     "    ( Brainstorm here)\n",
@@ -135,7 +138,7 @@
    },
    "source": [
     "* Intro to Git \n",
-    "    * A small [Guide]() to version control\n",
+    "    * A small [Guide](https://github.com/sedv8808/LighthouseLabs/blob/main/W05D5/GitHub%20Presentation/01_VersionControl.pdf) to version control\n",
     "    * How to collaborate with Git (Simple Git Workflow)\n",
     "        * Decide if you are going to do Branches or Forking the repository for collaboration.\n",
     "        * Your Master branch should always be \"ready to deploy\""
@@ -180,7 +183,14 @@
     }
    },
    "source": [
-    "**Other Ideas**"
+    "**Other Ideas**\n",
+    "\n",
+    "def sum(x, y):\n",
+    " z=x+y\n",
+    " return z\n",
+    " \n",
+    "def test_sum():\n",
+    "    assert sum(x=3, y=1) == 4"
    ]
   },
   {
@@ -230,11 +240,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Idea_05**  \n",
+    "Tricks for Model Selection\n",
+    "[Here](https://github.com/sedv8808/LighthouseLabs/blob/main/W05D4/W05D04_Choosing_Classifier.ipynb)"
+   ]
   }
  ],
  "metadata": {
