update slides for mid term project

--- a/W05D5/W05D5_MidProject_Kickoff.ipynb
+++ b/W05D5/W05D5_MidProject_Kickoff.ipynb
@@ -104,14 +104,22 @@
     "     - Write or download a public Code of Conduct\n",
     "     - Choose a Licence over your work\n",
     "     - Decide how will you collaborate, will you share a Notebook on Google Cloud? Will you use a Version Control (Github) system?\n",
-    "     - Decide how many Jupyter notebooks or python scripts you will need so that you do not duplicate work.\n",
+    "     - Decide how many Jupyter notebooks or python scripts you will need so that you do not duplicate work.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "     - Don't do\n",
     "     SELECT * FROM aviation without a WHERE clause\n",
     "     Do: Save as CSV\n",
     "    \n",
-    "    * How to divide up tasks?\n",
-    "    ( Brainstorm here)\n",
-    "\n"
+    "    * How to divide up tasks?"
    ]
   },
   {
@@ -183,14 +191,7 @@
     }
    },
    "source": [
-    "**Other Ideas**\n",
-    "\n",
-    "def sum(x, y):\n",
-    " z=x+y\n",
-    " return z\n",
-    " \n",
-    "def test_sum():\n",
-    "    assert sum(x=3, y=1) == 4"
+    "**Other Ideas**"
    ]
   },
   {
@@ -241,12 +242,43 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "How to write tests:\n",
+    "```\n",
+    "def sum(x, y):\n",
+    " z=x+y\n",
+    " return z\n",
+    " \n",
+    "def test_sum():\n",
+    "    assert sum(x=3, y=1) == 4\n",
+    "    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Idea_05**  \n",
     "Tricks for Model Selection\n",
     "[Here](https://github.com/sedv8808/LighthouseLabs/blob/main/W05D4/W05D04_Choosing_Classifier.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
