--- a/W07D02/W07D2_ML_Deployment.ipynb
+++ b/W07D02/W07D2_ML_Deployment.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Lighthouse Labs\n",
-    "### W05D5 Midterm Project\n",
+    "### W07D2 Deployment of ML Models\n",
     "Instructor: Socorro Dominguez  \n",
     "October 27, 2020"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Agenda:**\n",
     "\n",
@@ -27,23 +35,48 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## How is Data Science related to the Web?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Web Pages are intended for Humans. However, there’s lots of valuable data embedding in web pages:\n",
     "* course listings\n",
     "* bank records\n",
-    "* blogs\n",
-    "\n",
-    "\n",
-    "What if we wanted to collect this data for analysis?\n",
-    "\n",
+    "* blogs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### What if we wanted to collect this data for analysis?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "We would need a program that acts like a web browser but collects web document data rather than displaying it.\n",
     "\n",
     "This is called `web scraping`. Popular methods include Scrapy, a free and open-source web-crawling framework written in Python. "
@@ -51,17 +84,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "A Web Scraper...\n",
     "* acts like a web browser (i.e., sends HTTP GET requests to web server)\n",
     "* at the time it allows your to process the data that comes back.\n",
     "\n",
-    "Some other useful libraries for scraping if you are interested:\n",
-    "\n",
-    "curl\n",
-    "* utility and library for accessing web servers\n",
-    "* delivers web data as text\n",
+    "Some other useful libraries useful when scraping if you are interested:\n",
     "\n",
     "Beautiful Soup\n",
     "* python library that can parse HTML (Super useful)"
@@ -69,30 +102,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Disadvantages of Web Scraping\n",
     "\n",
-    "For anybody who is not an expert, the scraping processes are hard to understand.\n",
+    "- Scraping processes are hard to understand.\n",
     "\n",
-    "The data that has been extracted will first need to be treated so that they can be easily understood (This is where we use `Beautiful Soup`. \n",
-    "In certain cases, this might take a long time and a lot of energy to complete.\n",
+    "- Extracted data needs extensive cleaning (This is where we use `Beautiful Soup`). \n",
     "\n",
-    "It is common for new data extraction applications to take some time in the beginning as the software often has a learning curve. Sometimes web scraping services take time to become familiar with the core application and need to adjust to the scrapping language. This means that such services can take some days before they are up and running at full speed.\n",
+    "- In certain cases, this might take a long time and a lot of energy to complete (show why)\n",
     "\n",
-    "Most web scrapping services are slower than API calls and another problem is the websites that do not allow screen scrapping. In such cases web scrapping services are rendered useless. Also, if the developer of the website decides to introduce some changes in the code, the scrapping service might stop working."
+    "- New data extraction applications a lot of time in the beginning. \n",
+    "\n",
+    "- Web scrapping services are slower than API calls.\n",
+    "\n",
+    "- If the developer of a website decides to introduce changes in the code, the scrapping service might stop working."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## What is an API?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "**A**pplication  \n",
     "**P**rogramming  \n",
@@ -107,7 +155,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Characteristics?\n",
     "\n",
@@ -116,24 +168,39 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Some web site’s provide direct access to their data. For example: Twitter, Translink, Car2Go, Google Maps, Yahoo\n",
+    "### Furthermore....\n",
     "\n",
-    "Why would they do this?\n",
-    "Why would some web sites not do this?"
+    "some web site’s provide direct access to their data. For example: Twitter, Translink, Car2Go, Google Maps, Yahoo\n",
+    "\n",
+    "* Why would they do this?\n",
+    "\n",
+    "* Why would some web sites not do this?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### What representation is DATA found in?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "**J**ava**S**cript **O**bject **N**otation (json)\n",
     "\n",
@@ -145,7 +212,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "JSON\n",
     "* textual description of python (javascript actually) objects\n",
@@ -163,7 +234,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "XML\n",
     "• hierarchical description of tagged data  - This is how you would usually see data if you clic inspect to do Web Scraping\n",
@@ -192,7 +267,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Using a Web API\n",
     "\n",
@@ -200,7 +279,7 @@
     "* message format for requests and responses\n",
     "* usually in both XML and JSON\n",
     "* registration and authentication\n",
-    "* usually using OAuth  \n",
+    "* usually using OAuth (delegated authorization framework for REST/APIs. It enables apps to obtain limited access to a user's data without giving away a user's password.)\n",
     "\n",
     "\n",
     "Language integration\n",
@@ -213,7 +292,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Getting JSON Data\n",
     "\n",
@@ -234,15 +317,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Example using Trasnlink API"
+    "Example using Trasnlink API  \n",
+    "\n",
+    " ``` Get out of slideshow mode```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -258,7 +351,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -340,7 +437,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### The Anatomy Of A Request\n",
     "\n",
@@ -352,16 +453,24 @@
     "\n",
     "3. The headers\n",
     "\n",
-    "4. The data (or body)\n",
-    "\n",
+    "4. The data (or body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "1. The endpoint (or route) is the url you request for\n",
     "\n",
     "root-endpoint/?\n",
     "\n",
     "https://api.github.com\n",
     "\n",
-    "2. The Method\n",
-    "The method is the type of request you send to the server. You can choose from these types below:\n",
+    "2. The Method is the type of request you send to the server. You can choose from these types below:\n",
     "\n",
     "a. GET - Used to get resource from server\n",
     "\n",
@@ -374,14 +483,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "STOCK API demo"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## FLASK\n",
     "\n",
@@ -390,20 +507,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Now that you are going to be a Data Scientist, you cannot always rely on having your models in Jupyter Notebook.\n",
     "\n",
-    "Sure, Jupyter Notebooks are awesome to do data exploration and analysis. Once you fully understand a project, maybe one of your outcomes is to hand in an application taht has a predictive model.\n",
+    "Jupyter Notebooks are awesome for EDA. However, when you need an application that has a predictive model, you will need to deploy your model elsewhere.\n",
     "\n",
-    "You can try to get the best model possible in a notebook or a script. Once everybody has conveyed that is the best model, you must hand it in a way that the client can run it easily in their infraestructure. \n",
+    "You can try to get the best model possible in a notebook or a script. Once you have decided that you have the best model, you must hand it in a way that the client can run it easily in their infraestructure. \n",
     "\n",
     "For this purpose you need a tool that can fit in their  infrastructure, preferably in a language that you’re familiar with. This is where you can use Flask. Flask is a micro web framework written in Python. It can create a REST API that allows you to send data, and receive a prediction as a response."
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Let's create a super fast model for predicting Boston's house pricing.\n",
+    "\n",
+    "``` Out of slideshow mode```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +677,7 @@
        "4  396.90  5.33  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +842,7 @@
        "4     18.7  396.90   5.33  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +883,7 @@
        "RandomForestRegressor()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,21 +909,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r^2 :  0.9808574134972359\n",
-      "Mean Absolute Error:  0.8176287128712857\n",
-      "Mean Squared Error:  1.5463646485148501\n",
-      "Root Mean Squared Error :  1.2435291104412676\n",
-      "r^2 :  0.9052584692614715\n",
-      "Mean Absolute Error :  2.3210980392156855\n",
-      "Mean Squared Error :  9.363058156862746\n",
-      "Root Mean Absolute Error :  3.059911462258793\n"
+      "r^2 :  0.9811314961312023\n",
+      "Mean Absolute Error:  0.8088490099009886\n",
+      "Mean Squared Error:  1.5242238737623763\n",
+      "Root Mean Squared Error :  1.2345946192019372\n",
+      "r^2 :  0.9061638456037587\n",
+      "Mean Absolute Error :  2.38821568627451\n",
+      "Mean Squared Error :  9.27358217647059\n",
+      "Root Mean Absolute Error :  3.045255683267103\n"
      ]
     }
    ],
@@ -812,28 +946,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([30.324, 26.611, 19.755, 20.54 , 19.641, 19.722, 28.093, 18.885,\n",
-       "       20.808, 23.675, 30.086, 30.998, 20.578, 19.861, 20.385, 27.151,\n",
-       "       11.918, 41.285, 24.23 , 14.704, 20.05 , 16.177, 24.32 , 23.685,\n",
-       "       25.42 ,  9.301, 15.078, 20.23 , 43.472, 12.891, 26.582, 19.55 ,\n",
-       "       47.898, 16.036, 23.519, 21.001, 15.368, 33.602, 12.93 , 19.562,\n",
-       "       24.572, 23.147, 25.981, 15.942, 16.038, 11.928, 47.708, 10.862,\n",
-       "       21.912, 18.89 , 24.059, 21.955, 25.046, 20.663, 10.915, 23.677,\n",
-       "       11.526, 23.202, 18.671, 42.309, 14.016, 26.831, 12.743, 14.697,\n",
-       "       18.279, 32.385, 41.746, 25.079, 21.492, 20.342, 23.908,  6.609,\n",
-       "       18.596, 20.574, 19.852, 20.459, 39.488, 24.278, 27.146, 32.751,\n",
-       "       17.114, 20.458, 34.248, 11.834, 24.763, 25.8  , 14.847, 24.64 ,\n",
-       "       19.835, 17.512, 28.137, 45.882, 16.513, 21.106, 15.131, 20.755,\n",
-       "       24.128, 23.279, 42.103, 20.856, 16.636, 15.337])"
+       "307    28.2\n",
+       "343    23.9\n",
+       "47     16.6\n",
+       "67     22.0\n",
+       "362    20.8\n",
+       "       ... \n",
+       "92     22.9\n",
+       "224    44.8\n",
+       "110    21.7\n",
+       "426    10.2\n",
+       "443    15.4\n",
+       "Name: PRICE, Length: 102, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([29.544, 27.597, 20.492, 20.42 , 19.419, 19.505, 27.797, 18.824,\n",
+       "       20.366, 23.996, 29.116, 30.834, 20.72 , 19.985, 20.345, 24.152,\n",
+       "       11.914, 40.394, 24.311, 14.185, 20.025, 16.878, 24.231, 23.718,\n",
+       "       25.712,  9.547, 14.772, 19.766, 43.614, 12.464, 26.561, 19.695,\n",
+       "       47.78 , 15.929, 23.834, 20.707, 15.504, 33.291, 13.959, 19.941,\n",
+       "       24.558, 23.187, 25.266, 16.043, 15.423, 10.841, 47.421, 11.421,\n",
+       "       21.506, 18.819, 22.879, 21.273, 24.641, 20.895, 10.758, 23.773,\n",
+       "       11.902, 23.595, 19.153, 42.433, 14.445, 26.701, 13.038, 14.702,\n",
+       "       18.001, 32.591, 41.144, 24.998, 21.098, 21.193, 23.854,  6.905,\n",
+       "       18.329, 21.429, 19.523, 20.458, 42.844, 24.175, 28.488, 32.579,\n",
+       "       17.137, 20.929, 34.3  , 12.   , 24.469, 25.462, 14.937, 24.186,\n",
+       "       19.819, 16.895, 26.279, 45.127, 15.501, 21.262, 15.321, 20.903,\n",
+       "       23.804, 23.703, 42.576, 20.82 , 15.589, 16.113])"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +1018,7 @@
     "\n",
     "# saving the columns\n",
     "model_columns = list(X.columns)\n",
-    "with open('models/model_columns.pkl','wb') as file:\n",
+    "with open('model_columns.pkl','wb') as file:\n",
     "    pickle.dump(model_columns, file)\n",
     "    \n",
     "    \n",
@@ -861,14 +1026,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Tmux\n",
+    "\n",
+    "Show Tmux and its interactivity for multiple session handling.\n",
+    "\n",
+    "You can learn more about it [here](https://www.hamvocke.com/blog/a-quick-and-easy-guide-to-tmux/)\n"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
