--- a/W08D2/W08D2_DLArchitectures.ipynb
+++ b/W08D2/W08D2_DLArchitectures.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Lighthouse Labs\n",
     "### W08D2 Deep Learning Architectures\n",
@@ -12,7 +16,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Agenda:**\n",
     "\n",
@@ -20,31 +28,42 @@
     "    * CNN\n",
     "        * Image Recognition\n",
     "    * RNN\n",
-    "    * LSTM\n",
+    "        * LSTM\n",
     "    \n",
-    "* Evolution of DL Architectures\n",
     "* Best practices when designing a network"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Different DL Architectures"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Convolutional Neural Networks (CNN)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "Convolutional Neural Networks are used in computer vision problems. Their input is usually images and the output usually is probabilities. \n",
+    "CNNs are widely used in computer vision problems. Their input is usually images and their output is usually probabilities of being something. \n",
     "\n",
     "A CNN is a special kind of FeedForward NN that reduces the number of parameters in a deep neural network with many units without losing too much in the quality of the model. \n",
     "\n",
@@ -55,7 +74,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "We train the NN to recognize regions of the same information as well as the edges. This would allow the NN to predict the object represented in the image. \n",
     "\n",
@@ -66,7 +89,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "* The most important information in the image is local\n",
     "\n",
@@ -77,7 +104,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "In CNNs, a small regression model looks like:\n",
     "\n",
@@ -89,7 +120,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "To detect some pattern, a small regression model has to learn the parameters of a matrix F (for “filter”) of size p × p, where p is the size of a patch.\n",
     "\n",
@@ -99,14 +134,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "$$P = \\begin{bmatrix} 0 & 1 & 0 \\\\ 1 & 1 & 1 \\\\ 0 & 1 & 0 \\end{bmatrix}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "The previous patch represents a pattern that looks like a cross. \n",
     "\n",
@@ -119,7 +162,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Then convolution operator is only defined for matrices that have the same number of rows and columns. For our matrices of P and F it’s calculated as illustrated below:\n",
     "\n",
@@ -128,7 +175,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "If our patch had a different pattern, then the convolution with F would give a different result. \n",
     "\n",
@@ -140,7 +191,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "One layer of a CNN consists of multiple convolution filters (each with its own bias parameter).\n",
     "\n",
@@ -153,7 +208,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "If the CNN has one convolution layer following another convolution layer, then the subsequent layer *l + 1* treats the output of the preceding layer *l* as a collection of size *l* image matrices.\n",
     "\n",
@@ -164,7 +223,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Pooling**\n",
     "\n",
@@ -174,20 +237,67 @@
     "\n",
     "Pooling's hyperparameters are also the size of the filter and the stride. \n",
     "\n",
-    "Usually, a pooling layer follows a convolution layer, and it gets the output of convolution as input. \n",
-    "\n",
-    "Pooling only has hyperparameters and doesn’t have parameters to learn. It also contributes to the increased accuracy of the model and improves the speed of training by reducing the number of parameters of the neural network."
+    "Usually, a pooling layer follows a convolution layer, and it gets the output of convolution as input. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Poolingdoesn’t have parameters to learn. It also contributes to the increased accuracy of the model and improves the speed of training by reducing the number of parameters of the neural network.\n",
+    "![pooling](img/04_Pooling.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### ReLU as Normalization Technique\n",
+    "\n",
+    "After getting our new convolved matrix, turn anything negative to zero.\n",
+    "\n",
+    "This removes unnecessary noise. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What a CNN looks like after all?\n",
+    "\n",
+    "![img](img/05_FullCNN.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Implementing Example in Keras**   \n",
     "\n",
     "We'll move on to the famous the MNIST digits -- a classic dataset for deep learning. The MNIST data set is  bigger than the digits dataset built into sklearn: the images are larger ($28\\times28$ instead of $8\\times8$) and there are more of them ($70000$ insetad of $1797$). In total, we're dealing with $70000\\times28\\times28\\approx 55$ million training pixels instead of $1797\\times8\\times8\\approx80000$ training pixels (about $500$ times more data). \n",
     "\n",
-    "The following code loads the MNIST dataset. The first time you run it, the data will be downloaded. In future times, it will use the local version."
+    "The following code loads the MNIST dataset. The first time you run it, the data will be downloaded. In future times, it will use the local version.\n",
+    "\n",
+    "*Close presentation view*\n",
+    "\n",
+    "\n",
+    "Also check FMNIST Fashion Example"
    ]
   },
   {
@@ -357,14 +467,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Recurrent Neural Networks"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "RNNs are used to label, classify, or generate sequences. \n",
     "\n",
@@ -375,7 +493,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "RNNs are often used in text processing because sentences and texts are naturally sequences of either words and punctuation marks or sequences of characters. RNN's are also used in speech processing.\n",
     "\n",
@@ -386,7 +508,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Let’s consider the first and the second recurrent layers of an RNN. The first (leftmost) layer receives a feature vector as input. The second layer receives the output of the first layer as input.\n",
     "\n",
@@ -398,12 +524,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "In an RNN, the feature vectors from an input example are “read” by the NN sequentially in the order of the timesteps. \n",
     "\n",
     "\n",
-    "The values of wl,u, ul,u, bl,u, Vl,u, and cl,u are computed from the training data using gradient descent with backpropagation. To train RNN models, a special version of backpropagation is used called backpropagation through time.\n",
+    "The weights are computed from the training data using gradient descent with backpropagation. To train RNN models, a special version of backpropagation is used called backpropagation through time.\n",
     "\n",
     "**Disadvantages**\n",
     "* Most of the times, tanh and softmax are used but they both suffer from the vanishing gradient problem. \n",
@@ -415,7 +545,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "The most effective RNN models used in practice are gated RNNs. These include the long short-term memory (**LSTM**) networks, which can store information in their units for future use, much like bits in a computer’s memory. \n",
     "\n",
@@ -426,7 +560,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Example:** If the input text starts with the word *she*, a language processing RNN model could decide to store the information about the gender to interpret correctly the word their seen later in the sentence.\n",
     "\n",
@@ -435,7 +573,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Other important extensions to RNNs include bi-directional RNNs, RNNs with attention and sequence-to-sequence RNN models. The latter, in particular, are frequently used to build neural machine translation models and other models for text to text transformations."
    ]
@@ -444,11 +586,36 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "**Building RNN's**"
+    "**What do RNN's look like**\n",
+    "![rnn](img/06_RNN_viz.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![LSTM](img/07_LSTM.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Building RNN's**\n",
+    "\n",
+    "* Out of presentation mode"
    ]
   },
   {
@@ -691,20 +858,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "did\n"
-     ]
-    }
-   ],
    "source": [
-    "print_next_word('finger')"
+    "Check out Andre Karpathy's blog: [The Unreasonable Effectiveness of Recurrent Neural Networks](http://karpathy.github.io/2015/05/21/rnn-effectiveness/)"
    ]
   },
   {
@@ -716,6 +873,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
