--- a/W07D2/Stock_API.ipynb
+++ b/W07D2/Stock_API.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "\n",
     "# Put your key here.\n",
-    "os.environ['ALPHA_API'] = \"NE20K1OP63DAOK29\""
+    "os.environ['ALPHA_API'] = \"\""
    ]
   },
   {
@@ -180,7 +180,7 @@
     "    data.LastUpdate = pd.Period(data_json['Meta Data']['3. Last Refreshed'], freq='D')\n",
     "    data.columns = [re.split(\"[1-9]*\\. \", column)[1] for column in data.columns] \n",
     "    \n",
-    "    return data, data_json"
+    "    return data"
    ]
   },
   {
