--- a/W08D4/W08D4_NLPII.ipynb
+++ b/W08D4/W08D4_NLPII.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "## Lighthouse Labs\n",
-    "### W08D4 Deep Learning Architectures\n",
+    "### W08D4 NLP II\n",
     "Instructor: Socorro Dominguez  \n",
     "November 05, 2020"
    ]
@@ -296,7 +296,17 @@
     "We need to encode movie reviews into feature vectors so that we can train supervised machine learning models with `scikit-learn`. \n",
     "\n",
     "How can we do this?\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "#### Create word frequency counts (`X_counts`)\n",
     "Turn the text into sparse vector of word frequency counts using [CountVectorizer](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html) from  `scikit-learn`. \n",
     "\n",
@@ -2078,7 +2088,7 @@
     "\n",
     "Let's actually build a topic model.  \n",
     "\n",
-    "1. Build an LDA model using `gensim`'s [`models.LdaModel`](https://radimrehurek.com/gensim/models/ldamodel.html) with `num_topics` = 5. Note: If you get many warnings when you build your model, update your gensim installation.  See [here](https://github.com/RaRe-Technologies/gensim/pull/2296).\n",
+    "1. Build an LDA model using `gensim`'s [`models.LdaModel`](https://radimrehurek.com/gensim/models/ldamodel.html) with `num_topics` = 10. Note: If you get many warnings when you build your model, update your gensim installation.  See [here](https://github.com/RaRe-Technologies/gensim/pull/2296).\n",
     "2. Print LDA topics with the `model.print_topics()` methods, where `model` is your LDA model. \n",
     "3. Experiment with a few choices of `num_topics` hyperparameter. \n",
     "4. Experiment with a few choices of `passes` hyperparameter. \n",
