--- a/W10D2/W10D2_RecommendationEngines2.ipynb
+++ b/W10D2/W10D2_RecommendationEngines2.ipynb
@@ -273,28 +273,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Really? Are you seriously just talking about \"averaging\" stuff?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- Well, we can make things more interesting then!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "fragment"
     }
    },
@@ -347,46 +325,9 @@
     }
    },
    "source": [
-    "#### Linear Regression - one for each user\n",
-    "\n",
-    "- We can make $Y_{ij} = \\beta_0^{(i)}+\\beta_1^{(i)}X^{(j)}_1+...++\\beta_p^{(i)}X^{(j)}_p$\n",
-    "    - note that $\\beta_0$ is the intercept term and accounts for the bias of each user;\n",
-    "\n",
-    "\n",
-    "\n",
-    "- Then, we want to minimize\n",
-    "$$\n",
-    "L(y_{ij}, \\hat{y}_{ij}) = \\sum_{j}u_{ij}\\left(y_{ij} -  X^{(j)}\\left(\\beta^{(i)}\\right)\\right)^2\n",
-    "$$\n",
-    "where $u_{ij}=1$ if User $i$ has provided a rating for movie $j$, and 0 otherwise;\n",
-    "\n",
-    "\n",
-    "\n",
-    "- You can also regularize the function if you want, using for example, $L_1$ or $L_2$ regularization;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "- How to minimize? Take your pick!\n",
     "    - Maybe Gradient Descent?\n",
     "    - Or any other minimization algorithm that you might want to use!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- **Question:** Before we obtained the user profile and computed the similarity with the movies' profiles. Now we are using a linear model. How do we use this linear model?"
    ]
   },
   {
@@ -433,115 +374,6 @@
     "\n",
     "\n",
     "- Cold start: you don't have any information about new users, what to do?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Another possible way - the sky is the limit!!!!\n",
-    "\n",
-    "- Since you have:\n",
-    "    - the features of the movies;\n",
-    "    - and some ratings provided by the users;\n",
-    "\n",
-    "\n",
-    "- You could also use classification algorithms to classify new movies (using their features) into groups (e.g., like vs dislike)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Symmetry?\n",
-    "\n",
-    "- As said above, it might not be easy and/or cheap to obtain the movies profile;\n",
-    "\n",
-    "\n",
-    "- So, what if instead of creating items' profiles, you create users' profiles?\n",
-    "    - e.g., you ask the users for information (do you like Jennifer Aniston? Action movies?, etc...);\n",
-    "\n",
-    "\n",
-    "- Say we have 4 users:\n",
-    "    - User 1 and 2 said they love action movies;\n",
-    "    - User 3 and 4 said they hate action movies;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- If you have a movie that you know nothing about but\n",
-    "    - User 1 and 2 rated the movie highly;\n",
-    "    - User 3 and 4 rated the movie poorly; \n",
-    "    \n",
-    "    what does that tell you?\n",
-    "\n",
-    "\n",
-    "\n",
-    "- It is pretty much the same problem, but inverted. Now:\n",
-    "    - you have the $\\beta^{(i)}$ for each user $i=1,...,m$;\n",
-    "    - you want to find $X^{(j)}$ for each movie;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- To do that you can minimize almost the same function:\n",
-    "$$\n",
-    "L(y_{ij}, \\hat{y}_{ij}) = \\sum_{i}u_{ij}\\left(y_{ij} -  X^{(j)}\\left(\\beta^{(i)}\\right)\\right)^2\n",
-    "$$\n",
-    "where $u_{ij}=1$ if User $i$ has provided a rating for movie $j$, and 0 otherwise;\n",
-    "\n",
-    "\n",
-    "\n",
-    "- You can also regularize this function if you want (and you probably want!);\n",
-    "\n",
-    "\n",
-    "- What is the difference?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    " - We are minimizing on $X$ and the sum is over the rows;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- A big problem with this approach is that users are not very happy to give you the information you need;\n",
-    "\n",
-    "\n",
-    "\n",
-    "- So, let's see a different approach;"
    ]
   },
   {
@@ -807,8 +639,7 @@
     "    - \"because you watched Jurassic Park: \"\n",
     "\n",
     "\n",
-    "- Or we can apply ML techniques: K-Means, NearestNeighbors\n",
-    "    - **The sky is the limit!!!!**"
+    "- Or we can apply ML techniques: K-Means, KNN, the choice is yours"
    ]
   },
   {
@@ -844,32 +675,12 @@
     }
    },
    "source": [
-    "### Precision at N\n",
-    "\n",
-    "- Say that you recommend the Top-N items, then we look at the proportion of these items that are relevant, $r$:\n",
-    "$$\n",
-    "\\text{Precision@}N = \\frac{r}{N}\n",
-    "$$\n",
-    "for example, $r$ could be the number of elements in your list that the user rated. \n",
-    "\n",
-    "<br><br>\n",
-    "- In this way, you would know that your system is recommending items that the user had interest in!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### But still....\n",
+    "### Remember that:\n",
     "\n",
     "- Just training your model and evaluating it offline is not ideal;\n",
     "\n",
     "\n",
-    "- The thing is, we don't have a ground truth! \n",
+    "- We don't have a ground truth! \n",
     "\n",
     "\n",
     "- Although we want to recommend only items the user is interested in, the recommended items might skew/affect the users interest;\n",
